--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   google_sign_in: ^4.5.4
   meta: ^1.1.8
   font_awesome_flutter: ^8.4.0
+#  video_player: ^0.11.1+2
+  video_player: 0.10.12+3
 
 
 dev_dependencies:
