--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,8 +39,10 @@ dependencies:
   google_sign_in: ^4.5.4
   meta: ^1.1.8
   font_awesome_flutter: ^8.4.0
-#  video_player: ^0.11.1+2
   video_player: 0.10.12+3
+  rxdart: ^0.24.1
+  permission_handler: ^3.0.0
+
 
 
 dev_dependencies:
