--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,8 +42,7 @@ dependencies:
   video_player: 0.10.12+3
   rxdart: ^0.24.1
   permission_handler: ^3.0.0
-
-
+  device_preview: ^0.4.8
 
 dev_dependencies:
   flutter_test:
